--- a/custom.css
+++ b/custom.css
@@ -4,6 +4,8 @@ body {
    flex-direction: column;
    background-image: url("img/hero.jpg");
    background-repeat: no-repeat;
+   background-size: contain;
+   min-width: 960px;
 }
 
 main {
@@ -20,30 +22,36 @@ h2 {
 .nav-wrapper {
   background-color: #1565C0;
   padding-right: 20px;
-  padding-left: 20px;
+  padding-left: 100px;
 }
 
 .parallax-container {
-  min-height: 380px;
   line-height: 0;
   height: auto;
   color: rgba(255,255,255,.9);
+  /*justify-content: space-around;*/
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  height: 400px;
 }
 
 .parallax-container .section {
   width: 100%;
 }
 
-.header {
-  position: fixed;
-}
-
 .card-container {
   display: flex;
   flex-flow: row;
-  justify-content: space-around;
+  flex-wrap: nowrap;
+  justify-content: center;
   padding-bottom: 200px;
-  padding-top: 20px;
+}
+
+.card {
+  min-height: 250px;
+  /*max-width: 300px;*/
+  /*min-width: 200px;*/
 }
 
 .service-icon {
