fixed landing page to use primarily materialize

--- a/custom.css
+++ b/custom.css
@@ -1,136 +1,12 @@
-body {
-   display: flex;
-   min-height: 100vh;
-   flex-direction: column;
-   /*background-image: url("img/hero.jpg");*/
-   /*background-repeat: no-repeat;*/
-   /*background-size: contain;*/
-   /*min-width: 960px;*/
-}
-
-/*Fonts*/
-
-h1 {
-  font-weight: bold;
-}
-
-h2 {
-  color: #FF4081;
-  font-weight: bold;
-  font-size: 32px;
-  display: inline-flex;;
-}
-
-h3 {
-
+.card-panel {
+  box-shadow: 0 0 0 0;
 }
 
 .nav-wrapper {
-  background-color: #1565C0;
-  padding-right: 20px;
   padding-left: 10px;
-}
-
-/*Banner*/
-
-.parallax-container {
-  min-height: 380px;
-  line-height: 0;
-  height: auto;
-  color: rgba(255,255,255,.9);
-
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-}
-
-.parallax-container .section {
-  width: 100%;
-}
-
-.parallax img {
-  display: block;
-}
-
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
-}
-
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
-
-  .card-container {
-    padding-bottom: 200px;
-  }
-}
-
-/*Row and Column*/
-col 
-
-/*Info Cards*/
-
-.card-container {
-  display: flex;
-  flex-flow: row;
-  flex-wrap: nowrap;
-  justify-content:center;
-  padding-bottom: 160px;
-  padding-left: 50px;
-  padding-right: 50px;
-}
-
-@media only screen and (max-width : 600px) {
-  .card-container {
-    flex-wrap: wrap;
-    padding-bottom: 280px;
-  }
-}
-
-.card {
-  /*min-height: 250px;*/
-  /*min-width: 400px;*/
-}
-
-.card-no-shadow {
-  box-shadow: 0 0 0;
-}
-
-.service-icon {
-  display: inline-flex;
-  width: 50px;
-  height: 50px;
   padding-right: 10px;
-  padding-top: 20px;
 }
 
-/*Buttons*/
-
-.btn-large {
-  background-color: #FF4081;
-  z-index: 0;
-}
-
-.btn-large:hover {
-  background-color: #FF99C0;
-}
-
-/*Footer*/
-
-#custom-footer {
-  background-color: #1565C0;
-  position: fixed;
-  bottom: 0px;
-  width: 100%;
-}
-
-.footer-copyright {
-  background-color: #0D47A1;
+h1 {
+  font-weight: bolder;
 }
